--- a/src/index.html
+++ b/src/index.html
@@ -7,7 +7,7 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
-  <link href="https://fonts.googleapis.com/css?family=Lato:300,400,400i,700" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Nunito:400,700,800|Open+Sans:400,600" rel="stylesheet">
 </head>
 <body>
   <lf-root></lf-root>
